# plasmoid-lgtv-remote

./: QUICKSTART.md  README.md  flake.nix  package.sh  sync-version.sh
.github/scripts/: dev-version.sh
.github/workflows/: build-dev.yml  build-nix.yml  build-plasmoid.yml  build-tray.yml  release.yml
lgtv-tray/: README.md  flake.nix  generate-icons.sh
lgtv-tray-remote/: .gitignore  README.md  flake.nix  sync-version.sh
lgtv-tray-remote/src/: index.html  main.js  style.css
lgtv-tray-remote/src-tauri/: Cargo.toml  tauri.conf.json
lgtv-tray-remote/src-tauri/src/: config.rs  main.rs  tv.rs
lgtv-tray/src/: index.html  main.js  style.css
lgtv-tray/src-tauri/: Cargo.toml
lgtv-tray/src-tauri/src/: config.rs  main.rs  tv.rs
plasmoid/: .gitignore  README.md  dev  flake.nix  install.sh  package.sh  uninstall.sh
plasmoid/package/: metadata.json
plasmoid/package/contents/code/: lgtv_daemon.py  lgtv_remote.py
plasmoid/package/contents/config/: main.xml
plasmoid/package/contents/ui/: main.qml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: autostart.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  tv.rs
tray/: .gitignore  README.md  flake.nix  generate-icons.sh
tray/src/: index.html  main.js  style.css
tray/src-tauri/: Cargo.toml  tauri.conf.json
tray/src-tauri/src/: main.rs
