[package]
name = "lgtv-tray-remote"
version = "1.4.0"
description = "Cross-platform system tray remote for LG webOS TVs"
authors = [""]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = { version = "2.5", optional = true }
auto-launch = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"
dirs = "6"
wake-on-lan = "0.2"
log = "0.4"
env_logger = "0.11"
[features]
default = ["custom-protocol", "autostart"]
custom-protocol = ["tauri/custom-protocol"]
autostart = ["tauri-plugin-autostart", "auto-launch"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5"
